# test_raid

./: README.md  fw_list.json  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  models.py  urls.py  views.py
main/management/commands/: get_abcd.py  get_list.py
main/migrations/: 0001_initial.py
main/templates/: serializers.py
main/templates/main/: base.html  index.html  single_page.html
